--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 <div class="bee-block bee-block-2 bee-text">
 <div class="bee-text-content" style="font-size: 14px; line-height: 120%; color: #ffffff; font-family: inherit;">
 <p style="font-size: 14px; line-height: 16px; text-align: center;">
-         HI, I AM IMRAN HOSSAIN
+         HI, I AM IMRAN 
         </p>
 </div>
 </div>
